Add new train paths and swaggerDef
